Trying to fix quiz on mobile

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1176,7 +1176,7 @@ pre {
   margin-bottom: 30px;
   z-index: 0;
   height: 500px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .answers {
